
    - Run tests with the '-3' option to Python 2.6 and clear up
      various reported incompatibilities.

    - Comb out code paths specialized to Pythons older than 2.4.

    - Update deprecation warnings; most now become mandatory.

    - Start deprecation cycle for BuildDir() and build_dir.

    - Start deprecation cycle for SourceCode() and related factories


RELEASE 1.3.0 - Tue, 23 Mar 2010 21:44:19 -0400

  From Steven Knight:

    - Update man page and documentation.

  From William Deegan (plus minor patch from Gary Oberbrunner):

    - Support Visual Studio 8.0 Express

RELEASE 1.2.0.d20100306 - Sat, 06 Mar 2010 16:18:33 -0800

  From Luca Falavigna:

    - Fix typos in the man page.

  From Gottfried Ganssauge:

    - Support execution when SCons is installed via easy_install.

  From Steven Knight:

    - Make the messages for Configure checks of compilers consistent.

    - Issue an error message if a BUILDERS entry is not a Builder
      object or a callable wrapper.

  From Rob Managan:

    - Update tex builder to handle the case where a \input{foo}
      command tries to work with a directory named foo instead of the
      file foo.tex. The builder now ignores a directory and continues
      searching to find the correct file. Thanks to Lennart Sauerbeck
      for the test case and initial patch

      Also allow the \include of files in subdirectories when variantDir
      is used with duplicate=0. Previously latex would crash since
      the directory in which the .aux file is written was not created.
      Thanks to Stefan Hepp for finding this and part of the solution.

  From James Teh:
    - Patches to fix some issues using MS SDK V7.0

  From William Deegan:
    - Lots of testing and minor patches to handle mixed MS VC and SDK
      installations, as well as having only the SDK installed.


RELEASE 1.2.0.d20100117 - Sun, 17 Jan 2010 14:26:59 -0800

  From Jim Randall:
    - Fixed temp filename race condition on Windows with long cmd lines.