@@ -80,6 +80,10 @@ RELEASE 2.0.0.beta.20100531 - Mon, 31 May 2010 22:15:00 -0700
 
     - Start deprecation cycle for SourceCode() and related factories
 
+  From Jim Randall:
+
+    - Document the AllowSubstExceptions() function in the User's Guide.
+
 
 RELEASE 1.3.0 - Tue, 23 Mar 2010 21:44:19 -0400
 
